upload 처리 1차 완료. converter 중